# exilesage

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: check-stop.sh  lint.sh  memory-check.py  safe-bash.sh
.claude/rules/: advisor.md  agents.md  data-layer.md
data/db/: schema.sql
data/processed/: augments.json  base_items.json  currencies.json
docs/: code_review.md
exilesage/: __init__.py  config.py  db.py
exilesage/advisor/: core.py  system_prompt.py  tool_defs.py
exilesage/cli/: app.py
exilesage/tools/: __init__.py  augments.py  currencies.py  items.py  mods.py
pipeline/: ingest.py  update.py
pipeline/importers/: __init__.py  _base.py  augments_importer.py  base_items_importer.py  currencies_importer.py  mods_importer.py
scraper/: freshness.py  processor.py  repoe.py
tests/: benchmark_queries.py  conftest.py  test_advisor.py  test_cli.py  test_core.py  test_db.py  test_freshness.py  test_importers.py  test_tools.py
