[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exilesage"
version = "0.1.0"
description = "PoE2 AI advisor — LLM-first knowledge base for crafting, builds, and game mechanics"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dateutil>=2.9",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
exilesage = "exilesage.cli.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: requires ANTHROPIC_API_KEY (deselect with '-m not integration')",
    "slow: takes more than 10 seconds",
]

[tool.ruff]
line-length = 100
